@@ -233,8 +233,8 @@ extern void add_weight(object *op, signed long weight);
 extern object *insert_ob_in_ob(object *op, object *where);
 extern int check_move_on(object *op, object *originator);
 extern object *present_arch(const archetype *at, mapstruct *m, int x, int y);
-extern object *present(unsigned char type, mapstruct *m, int x, int y);
-extern object *present_in_ob(unsigned char type, const object *op);
+extern object *present(uint8, mapstruct *m, int x, int y);
+extern object *present_in_ob(uint8 type, const object *op);
 extern object *present_in_ob_by_name(int type, const char *str, const object *op);
 extern object *present_arch_in_ob(const archetype *at, const object *op);
 extern void flag_inv(object *op, int flag);
