@@ -13,6 +13,11 @@ changes' is much more useful than 'misc edits' or 'code cleanup'.
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
+Make type's type coherent.
+ common/object.c
+ include/libproto.h
+Nicolas Weeger 2008-04-06
+
 Move conversion to lower case to calling function.
  server/c_new.c
 Nicolas Weeger 2008-04-06
